--- a/basic-beginners-less-discount.html
+++ b/basic-beginners-less-discount.html
@@ -8,7 +8,7 @@
       <template v-if="payment === 'I\'ll use my card to pay with PayPal'">
         <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
           <input type="hidden" name="cmd" value="_s-xclick">
-          <input type="hidden" name="hosted_button_id" value="U44GZZNP529CU">
+          <input type="hidden" name="hosted_button_id" value="X9QAW6LMS7KMG">
           <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_paynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
           <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
         </form>
