--- a/basic-beginners-less-discount.html
+++ b/basic-beginners-less-discount.html
@@ -159,7 +159,7 @@
         return this.status !== "LOADING";
       },
       submitButtonDisabled: function() {
-        return !!this.affiliateCode;
+        return !this.affiliateCode;
       }
     },
     methods: {
