--- a/love-your-voice.html
+++ b/love-your-voice.html
@@ -15,7 +15,7 @@
       </template>
       <template v-else-if="payment === 'I\'ll send an e-transfer to getstagejoy@gmail.com'">
         <p>
-          Please send your e-transfer of {{price}} to <a href="mailto:getstagejoy@gmail.com">getstagejoy@gmail.com</a> with the password &ldquo;inspireme&rdquo;!
+          Please send your e-transfer of {{price}} to <a href="mailto:getstagejoy@gmail.com">getstagejoy@gmail.com</a> with the password &ldquo;inspireme&rdquo; .
         </p>
       </template>
       <template v-else-if="payment === 'I\'ll call Danielle at 778 235 7696 and process my credit card over the phone'">
@@ -168,8 +168,8 @@
       affiliateCode: '',
       status: "INIT",
       payment: "I\'ll use my card to pay with PayPal",
-      price: "$525",
-      installmentPrice: "275"
+      price: "$775",
+      installmentPrice: "$395"
     },
     computed: {
       showSubmitButton: function() {
@@ -289,5 +289,9 @@
 
   #thank-you > * {
     margin-bottom: 0.5rem;
+  }
+
+  input.wsite-button-inner[disabled="disabled"] {
+    color: rgba(0, 0, 0, 0.2) !important;
   }
 </style>
